# netscitools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/netscitools/: __init__.py  network.py  neu_courses.py  util.py
